--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@tanstack/react-query": "^5.51.15",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
