--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tanstack/react-query": "^5.51.15",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.52.1"
   },
   "devDependencies": {
     "@types/node": "^20",
