--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.51.15",
     "next": "14.2.5",
