--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/error-message": "^2.0.1",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.51.15",
+    "@types/classnames": "^2.3.1",
     "axios": "^1.7.2",
     "next": "14.2.5",
     "react": "^18",
