--- a/package.json
+++ b/package.json
@@ -10,19 +10,25 @@
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^3.9.0",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.51.15",
     "@types/classnames": "^2.3.1",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "next": "14.2.5",
     "react": "^18",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "yup": "^1.4.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
