--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-intersection-observer": "^9.13.0",
+    "uuid": "^10.0.0",
     "yup": "^1.4.0",
     "zustand": "^4.5.4"
   },
@@ -32,6 +33,7 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "sass": "^1.77.8",
