--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.9.0",
     "@svgr/webpack": "^8.1.0",
-    "@tanstack/react-query": "^5.51.15",
+    "@tanstack/react-query": "^5.51.23",
     "@types/classnames": "^2.3.1",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
@@ -24,6 +24,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-intersection-observer": "^9.13.0",
+    "react-uuid": "^2.0.0",
     "uuid": "^10.0.0",
     "yup": "^1.4.0",
     "zustand": "^4.5.4"
