--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.51.23",
     "@types/classnames": "^2.3.1",
     "axios": "^1.7.2",
+    "cookies-next": "^4.2.1",
     "date-fns": "^3.6.0",
     "next": "14.2.5",
     "react": "^18",
