--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "eslint-plugin-prettier": "^5.2.1",
     "sass": "^1.77.8",
     "typescript": "^5"
   }
