--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
       "eslint:recommended",
       "plugin:react/recommended",
       "next/core-web-vitals",
-      "plugin:prettier/recommended"
+      "plugin:prettier/recommended",
+      "prettier"
     ],
     "settings": {
       "react": {
