--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hello-pangea/dnd": "^16.6.0",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.9.0",
+    "@netlify/plugin-nextjs": "^5.6.0",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.51.23",
     "@types/classnames": "^2.3.1",
