fix: 빌드 해결 (#128)
* fix: 빌드 에러 해결을 위한 타입 정리

* fix: toml 파일 수정

* fix: toml 파일 수정

* fix: package.json 수정

* fix: package.json 수정

* fix: toml 파일 수정

* fix

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,10 +7,10 @@
     "parser": "babel-eslint",
     "extends": [
       "eslint:recommended",
-      "plugin:react/recommended",
-      "next/core-web-vitals",
+      // "plugin:react/recommended",
+      // "next/core-web-vitals",
       "plugin:prettier/recommended",
-      "prettier"
+      // "prettier"
     ],
     "settings": {
       "react": {
